Cambiando orden de enlaces

--- a/views/logged.jade
+++ b/views/logged.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Bienvenido #{user}
+  p Bienvenido
   .image
     img(src='images/this-is-fine.jpg')
   .links
